--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </li>
             <li class="section-item">
               <div class="benefits-svg-box">
-                <svg lass="benefits-icon-svg" width="64" height="64">
+                <svg class="benefits-icon-svg" width="64" height="64">
                   <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
@@ -102,7 +102,7 @@
             </li>
             <li class="section-item">
               <div class="benefits-svg-box">
-                <svg lass="benefits-icon-svg" width="64" height="64">
+                <svg class="benefits-icon-svg" width="64" height="64">
                   <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
@@ -114,7 +114,7 @@
             </li>
             <li class="section-item">
               <div class="benefits-svg-box">
-                <svg lass="benefits-icon-svg" width="64" height="64">
+                <svg class="benefits-icon-svg" width="64" height="64">
                   <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
@@ -417,7 +417,7 @@
   <!--Footer-->
   <footer class="footer">
     <div class="footer-container container">
-      <div class="footer-logo-wrapper list">
+      <ul class="footer-logo-wrapper list">
         <li class="footer-item">
           <a href="./index.html" class="footer-logo link">
             <span class="footer-logo-web">WEB</span>STUDIO
@@ -428,7 +428,7 @@
             marketing & growth solutions.
           </p>
         </li>
-      </div>
+      </ul>
       <div class="footer-socials">
         <p class="footer-socials-text text">Social media</p>
         <ul class="footer-list list">
