--- a/portfolio.html
+++ b/portfolio.html
@@ -231,7 +231,7 @@
     <!-- Footer Section -->
     <footer class="footer">
       <div class="footer-container container">
-        <div class="footer-logo-wrapper list">
+        <ul class="footer-logo-wrapper list">
           <li class="footer-item">
             <a href="./index.html" class="footer-logo link">
               <span class="footer-logo-web">WEB</span>STUDIO
@@ -242,7 +242,7 @@
               marketing & growth solutions.
             </p>
           </li>
-        </div>
+        </ul>
         <div class="footer-socials">
           <p class="footer-socials-text text">Social media</p>
           <ul class="footer-list list">
