--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <li class="section-item">
               <img
                 src="./images/what-we-do-1.jpg"
-                alt="monitor with graphs and charts"
+                alt="monitor"
                 width="360"
                 height="300"
               />
@@ -323,7 +323,10 @@
                 <p class="section-item-position text">UI Designer</p>
                 <ul class="team-social-list list">
                   <li class="team-social-item">
-                    <a href="#" class="team-social-link">
+                    <a
+                      href="https://www.instagram.com"
+                      class="team-social-link"
+                    >
                       <svg class="team-social-svg" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
