--- a/portfolio.html
+++ b/portfolio.html
@@ -228,7 +228,7 @@
       </section>
     </main>
 
-    <!-- Footer Section -->
+    <!-- FOOTER -->
     <footer class="footer">
       <div class="footer-container container">
         <ul class="footer-logo-wrapper list">
