--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css" />
 
-    <!-- FONTS -->
+    <!-- GOOGLE FONTS -->
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
 
-    <!-- CSS Normalize -->
+    <!-- NORMALIZER -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
   </head>
   <body>
+    <!-- HEADER -->
     <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
@@ -59,7 +60,7 @@
       </div>
     </header>
     <main>
-      <!--Section 1-->
+      <!-- SECTION 1 INDEX.HTML -->
       <section class="hero hero-section">
         <div class="container hero-container">
           <h1 class="hero-title">
@@ -72,7 +73,10 @@
           </button>
         </div>
       </section>
-      <!--Section 2-->
+
+      <!--UPDATE-->
+
+      <!-- SECTION 2 INDEX.HTML -->
       <section class="section">
         <div class="container">
           <ul class="section-list list">
@@ -127,7 +131,7 @@
           </ul>
         </div>
       </section>
-      <!--Section 3-->
+      <!-- SECTION 3 INDEX.HTML-->
       <section class="section section-no-top-padding">
         <div class="container">
           <h2 class="section-title title">What Are We Doing</h2>
@@ -159,7 +163,7 @@
           </ul>
         </div>
       </section>
-      <!--Section 4-->
+      <!-- SECTION 4 INDEX.HTML-->
       <section class="section section-grey">
         <div class="container team-container">
           <h2 class="section-title title">Our Team</h2>
@@ -226,7 +230,7 @@
                 </ul>
               </div>
             </li>
-            <!--  -->
+
             <li class="section-list-item">
               <img
                 src="./images/our-team-2.jpg"
@@ -417,7 +421,7 @@
     </main>
   </body>
 
-  <!--Footer-->
+  <!--FOOTER-->
   <footer class="footer">
     <div class="footer-container container">
       <ul class="footer-logo-wrapper list">
