--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <!--UPDATE-->
 
       <!-- SECTION 2 INDEX.HTML -->
-      <section class="section">
+      <section class="section section-two">
         <div class="container">
           <ul class="section-list list">
             <li class="section-item">
