--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 4</title>
+    <title>Goit-hw-4</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css" />
@@ -446,7 +446,6 @@
               </svg>
             </a>
           </li>
-
           <li class="footer-socials-item">
             <a href="#" class="footer-socials-link">
               <svg class="footer-socials-svg" width="24" height="24">
@@ -454,7 +453,6 @@
               </svg>
             </a>
           </li>
-
           <li class="footer-socials-item">
             <a href="#" class="footer-socials-link">
               <svg class="footer-socials-svg" width="24" height="24">
@@ -462,7 +460,6 @@
               </svg>
             </a>
           </li>
-
           <li class="footer-socials-item">
             <a href="#" class="footer-socials-link">
               <svg class="footer-socials-svg" width="24" height="24">
