--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <ul class="section-list list">
             <li class="section-list-item">
               <img
-                src="./images/our-team-1.jpg"
+                src="./images/markguerrero.jpg"
                 alt="Mark Guererro"
                 width="264"
                 height="260"
@@ -233,7 +233,7 @@
 
             <li class="section-list-item">
               <img
-                src="./images/our-team-2.jpg"
+                src="./images/tomford.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -275,7 +275,7 @@
             </li>
             <li class="section-list-item">
               <img
-                src="./images/our-team-3.jpg"
+                src="./images/camillagarcia.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -317,7 +317,7 @@
             </li>
             <li class="section-list-item">
               <img
-                src="./images/our-team-4.jpg"
+                src="./images/danielwilson.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
